# Awasthi

./: .gitignore  Dictionaries_and_Functions.ipynb  PythonRefresher.ipynb  README.md  Variables_string_List_loop_boolen.ipynb  module.py
EmailService/: .env  .gitignore  README.md  alembic.ini  hello.py  pyproject.toml
EmailService/app/: config.py  main.py
EmailService/app/api/: campaign_routes.py  routes.py  subscriber_routes.py
EmailService/app/core/: email_templates.py  logging_config.py
EmailService/app/db/: db.py  models.py
EmailService/app/schemas/: email.py
EmailService/app/services/: campaign.py  email.py
Getting started with FastAPI/Initial_project/app/: database.py  main.py  schemas.py
Getting started with FastAPI/api_project/: requirements.txt  test.db
Getting started with FastAPI/api_project/app/: models.py
Python Refreshers/: Imports.ipynb  eg.txt  oop_python.ipynb
blogX/: .env  alembic.ini  pyproject.toml
blogX/alembic/: env.py
blogX/app/: main.py
blogX/app/core/: config.py  logging_config.py
blogX/app/database/: db.py  models.py
blogX/app/routers/: auth.py  blog.py  comments.py
blogX/app/schemas/: blog.py  comment.py  user.py
blog_service/: pyproject.toml  run.py
blog_service/blog_service/: main.py  schemas.py
blog_service/blog_service/core/: security.py
blog_service/blog_service/database/: base.py  models.py
blog_service/blog_service/routers/: auth.py  posts.py
todo_auth/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  x.py
todo_auth/alembic/: env.py
todo_auth/alembic/versions/: 6d815eaf6331_new_migration.py  71920166c2c7_initial_migration.py  9a246a5786bc_added_is_active_in_todo.py
todo_auth/app/: main.py
todo_auth/app/core/: auth.py  config.py  security.py
todo_auth/app/database/: models.py
todo_auth/app/routers/: auth.py  todo.py  user.py
todo_auth/app/schemas/: schemas.py
