[project]
name = "emailservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "fastapi[standard]>=0.115.11",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
